2018-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (ReadPICTImage): Fix leak of tile image on EOF.
	This is a recent regression.  Fixes oss-fuzz 7287
	"graphicsmagick/coder_PCT_fuzzer: Indirect-leak in
	CloneImage". (Credit to OSS-Fuzz)

	* magick/pixel_cache.c (OpenCache): Use image->scene rather than
	GetImageIndexInList(image) for scene-id part of cache info file
	name.

	* coders/txt.c (WriteTXTImage): Optimize the progress indicator
	since it is very inefficient with a large number of scenes and
	oss-fuzz 7090 "graphicsmagick/coder_TEXT_fuzzer: Timeout in
	graphicsmagick_coder_TEXT_fuzzer" consistently shows
	GetImageListLength() in its stack traces.

	* coders/dcm.c (ReadDCMImage): DICOM reader was no longer
	immediately quitting with excessive samples per pixel.  This
	caused spinning for a very long time when reading planar images
	with large samples per pixel.  This is a regression due to recent
	changes.  Fixes oss-fuzz 7269 "graphicsmagick/coder_DCM_fuzzer:
	Timeout in graphicsmagick_coder_DCM_fuzzer". (Credit to OSS-Fuzz)

	* coders/xcf.c (ReadXCFImage): Destroy layer info before returning
	due to exception.  This is a new regression due to adding more
	checks. Fixes oss-fuzz 7277 "graphicsmagick/coder_XCF_fuzzer:
	Direct-leak in ReadXCFImage". (Credit to OSS-Fuzz)

	* coders/pdb.c (ReadPDBImage): Assure that all bytes of scanline
	are initialized while decoding.  Fixes oss-fuzz 7051
	"graphicsmagick/coder_PDB_fuzzer: Use-of-uninitialized-value in
	WritePDBImage". (Credit to OSS-Fuzz)

2018-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Assure that scanline is
	initialized.  Fixes oss-fuzz 6612
	"graphicsmagick/coder_PCX_fuzzer: Use-of-uninitialized-value in
	WriteRLEPixels". (Credit to OSS-Fuzz)

	* coders/wpg.c (ReadWPGImage): Detect unexpected EOF and avoid use
	of uninitialized data.  Fixes oss-fuzz 6601
	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in